--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ color:
   primary-rgb: "102,102,102"
   secondary: 333333
   secondary-dark: 444444
+  secondary-light: 999999
 
 # Footer settings
 footer:
