--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Blockchain Manchester
 small_title: BM
-email: andy@whatsthescore.co.uk
+email: andy@whatsthescore.co.uk or james.morgan.e@googlemail.com
 url: https://blockchainmanc.github.io/
 description: "All things Blockchain, Love from Manchester"
 keywords: "Blockchain"
@@ -24,6 +24,7 @@ color:
 footer:
   social: Social
   wallets: Wallets
+  mailing: Mailing
 
 # Social networks
 social:
