--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Blockchain Manchester
 small_title: BM
 url: https://blockchainmanc.github.io/
-description: "All things Blockchain. Love from Manchester"
-keywords: "Blockchain"
-strapline: "All things Blockchain. Love from Manchester"
+description: "All things Blockchain. Love from Manchester."
+keywords: "Blockchain BTC ETH LTC"
+strapline: "All things Blockchain. Love from Manchester."
 meta_author: Manchester Blockcahin
 
 # Google webmaster tools
