--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ social:
     url: https://github.com/blockchainmanc
   - title: slack
     url: https://blockchainmanc.slack.com
+  - title: medium
+    url: https://medium.com/blockchain-manchester
 
 # wallets for tips
 wallets:
