--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ wallets:
     img: /img/btc_qrcode_150x150.png
     explorer: https://blockexplorer.com/address/1FtAP6ktAr49wgF5m6xyQN5CPCdvQ8jnQK
   - coin: ETH
-    account: "0x1652B165619b999065133428dd93023E7073254e"
+    account: "blockchainmanchester.eth"
     img: /img/eth_qrcode_150x150.png
     explorer: https://etherscan.io/address/0x1652B165619b999065133428dd93023E7073254e
   - coin: LTC
