--- a/_config.yml
+++ b/_config.yml
@@ -42,14 +42,14 @@ wallets:
     account: "blockchainmanchester.eth"
     img: /img/eth_qrcode_150x150.png
     explorer: https://etherscan.io/address/0x1652B165619b999065133428dd93023E7073254e
-  - coin: BTC
-    account: "1FtAP6ktAr49wgF5m6xyQN5CPCdvQ8jnQK"
-    img: /img/btc_qrcode_150x150.png
-    explorer: https://blockexplorer.com/address/1FtAP6ktAr49wgF5m6xyQN5CPCdvQ8jnQK
-  - coin: LTC
-    account: "LddXUkD37wSkoLh23EptoRyFnpbzUZnLpk"
-    img: /img/ltc_qrcode_150x150.png
-    explorer: https://live.blockcypher.com/ltc/address/LddXUkD37wSkoLh23EptoRyFnpbzUZnLpk/
+#  - coin: BTC
+#    account: "1FtAP6ktAr49wgF5m6xyQN5CPCdvQ8jnQK"
+#    img: /img/btc_qrcode_150x150.png
+#    explorer: https://blockexplorer.com/address/1FtAP6ktAr49wgF5m6xyQN5CPCdvQ8jnQK
+#  - coin: LTC
+#    account: "LddXUkD37wSkoLh23EptoRyFnpbzUZnLpk"
+#    img: /img/ltc_qrcode_150x150.png
+#    explorer: https://live.blockcypher.com/ltc/address/LddXUkD37wSkoLh23EptoRyFnpbzUZnLpk/
 
 # Build settings
 markdown: kramdown
